feat_begin: ProjectTab, Audio

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1080
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=230,702
+Size=421,686
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,8 +26,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=232,86
-Size=1688,818
+Pos=423,52
+Size=1497,1005
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=232,52
-Size=1688,32
+Pos=0,52
+Size=1920,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,756
-Size=230,324
+Pos=0,740
+Size=421,317
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1394,906
-Size=526,174
+Pos=1540,725
+Size=380,336
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=1325,852
+Size=1325,671
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=232,906
-Size=1160,174
+Pos=0,725
+Size=1538,336
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,1028
+Size=222,1009
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,7 +65225,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1551,52
-Size=369,852
+Size=369,671
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65715,27 +65715,55 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x077CD0AF,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x86EF4DB3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC300C60C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB4FEE44E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB0D568A8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x76A2E0A1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x9D8AFD4A,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=5,108 Size=1920,1028 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=230,829 Split=Y Selected=0x2E9237F7
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=421,829 Split=Y Selected=0x2E9237F7
         DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
         DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1208,829 Split=Y
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1497,829 Split=Y
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-        DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
+        DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,971 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,450 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xBDDC88E0
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,633 Split=X Selected=0xF6FF0623
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xF6FF0623
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,174 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=830,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=376,248 Selected=0x2323D3E4
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,336 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1538,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=380,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
