fix: List implementation worksgit add . bug: AssetImporter?

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=421,686
+Size=421,702
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=423,52
-Size=1497,1005
+Size=1497,690
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,740
-Size=421,317
+Pos=0,756
+Size=421,324
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1540,725
-Size=380,336
+Pos=1624,744
+Size=296,336
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,725
-Size=1538,336
+Pos=423,744
+Size=1199,336
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65747,9 +65747,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x35EA5A36,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=34,109 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=5,108 Size=1920,1028 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -65763,7 +65767,7 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=34,109 Size=1920,100
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,971 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,633 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xF6FF0623
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,336 Split=X Selected=0xBF096F38
               DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1538,248 Selected=0xBF096F38
