feat_end: AssetManager

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1080
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=421,702
+Size=421,689
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=423,52
-Size=1497,690
+Size=1497,671
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,756
-Size=421,324
+Pos=0,743
+Size=421,318
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1540,744
-Size=380,336
+Pos=1624,725
+Size=296,336
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,744
-Size=1538,336
+Pos=423,725
+Size=1199,336
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65787,9 +65787,45 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xC9728405,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x59B53920,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x556BAFA5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5D1C42E8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x219590C9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x84412184,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x528E6FFE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEAD1834E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2E1B50E4,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=5,108 Size=1920,1028 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=138,213 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
