--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1624,725
-Size=296,336
+Pos=1540,744
+Size=380,336
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=423,725
-Size=1199,336
+Pos=0,744
+Size=1538,336
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65823,9 +65823,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x7AAED40D,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=138,213 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,1028 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
