feat_end: Runtime can load a Screen and UIPage, as well as the scripts associated with both; bug: Memory issues causing graphical glitches and crash in EditorVisualizerPanel

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1080
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=423,52
-Size=1497,671
+Size=1497,726
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1540,744
-Size=380,336
+Pos=1797,780
+Size=123,281
 Collapsed=0
 DockId=0x00000014,0
 
@@ -323,8 +323,8 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=224,52
-Size=1325,671
+Pos=345,52
+Size=1204,722
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,744
-Size=1538,336
+Pos=423,780
+Size=1372,281
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,1009
+Size=343,1005
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,7 +65225,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1551,52
-Size=369,671
+Size=369,722
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65301,6 +65301,16 @@ Collapsed=0
 [Window][Choose Directory##ChooseDir]
 Pos=208,129
 Size=768,348
+Collapsed=0
+
+[Window][Create Entity with AudioComponent]
+Pos=1021,495
+Size=474,165
+Collapsed=0
+
+[Window][Create Entity with ScriptComponent]
+Pos=890,482
+Size=427,180
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -65827,13 +65837,29 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x5494A2EA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF6A9A155,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x72A7A1AE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x605FC850,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,1028 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=268,343 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
+  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
       DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=421,829 Split=Y Selected=0x2E9237F7
         DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
@@ -65842,12 +65868,12 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,102
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,971 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,633 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xBDDC88E0
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,722 Split=X Selected=0xF6FF0623
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1204,575 CentralNode=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,336 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1538,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=380,248 Selected=0x2323D3E4
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,281 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1372,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=123,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
