--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=250,702
+Size=250,566
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=252,52
-Size=1668,795
+Size=1352,562
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=0,52
-Size=1920,32
+Size=1604,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,756
-Size=250,324
+Pos=0,620
+Size=250,261
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1493,792
-Size=427,265
+Pos=1247,616
+Size=357,265
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,792
-Size=1491,265
+Pos=0,616
+Size=1245,265
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=343,1005
+Size=343,829
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65853,9 +65853,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x41351AE1,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
