progress: ScriptGlue, SceneVisualizerPanel drag-n-drop

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1080
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=416,702
+Size=416,689
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=418,52
-Size=1502,756
+Size=1502,737
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -40,7 +40,6 @@ Collapsed=0
 Pos=0,52
 Size=1920,32
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Light]
 Pos=41,51
@@ -293,8 +292,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,756
-Size=416,324
+Pos=0,743
+Size=416,318
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +310,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1446,810
-Size=474,270
+Pos=1549,791
+Size=371,270
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +336,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,810
-Size=1444,270
+Pos=418,791
+Size=1129,270
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65309,8 +65308,13 @@ Size=474,165
 Collapsed=0
 
 [Window][Create Entity with ScriptComponent]
-Pos=890,482
-Size=427,180
+Pos=642,281
+Size=613,305
+Collapsed=0
+
+[Window][Select Script Class]
+Pos=0,3
+Size=32,40
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -65861,27 +65865,33 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xA9E53A40,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA36B9183,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=-327,101 Size=1920,1028 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
-    DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-    DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
-    DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=416,829 Split=Y Selected=0x2E9237F7
-        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
-        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1502,829 Split=Y
-        DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-        DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,971 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,733 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1204,575 CentralNode=1 Selected=0xBDDC88E0
-              DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,270 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1129,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=371,248 Selected=0x2323D3E4
-          DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
-    DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=151,151 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
+    DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+    DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+  DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
+    DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=416,829 Split=Y Selected=0x2E9237F7
+        DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
+        DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1502,829 Split=Y HiddenTabBar=1
+        DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,733 Split=X Selected=0xF6FF0623
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1204,575 CentralNode=1 Selected=0xBDDC88E0
+            DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,270 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1129,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=371,248 Selected=0x2323D3E4
+        DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
+    DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
