Likely a viewport issue?

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,16 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=11,117
+Pos=330,195
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=416,689
+Size=423,514
 Collapsed=0
 DockId=0x00000005,0
 
@@ -21,13 +21,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=236,27
+Pos=-45,25
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=418,52
-Size=1502,737
+Pos=425,52
+Size=1175,590
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -37,7 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
+ViewportPos=0,75
+ViewportId=0x28257B55
 Size=1920,32
 Collapsed=0
 
@@ -52,12 +53,12 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=179,225
+Pos=289,228
 Size=700,73
 Collapsed=0
 
 [Window][Debug]
-Pos=1048,156
+Pos=492,396
 Size=297,412
 Collapsed=0
 
@@ -292,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,743
-Size=416,318
+Pos=0,568
+Size=423,309
 Collapsed=0
 DockId=0x00000006,0
 
@@ -310,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1549,791
-Size=371,270
+Pos=1296,644
+Size=304,233
 Collapsed=0
 DockId=0x00000014,0
 
@@ -323,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,52
-Size=1204,722
+Size=848,590
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -336,14 +337,14 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=418,791
-Size=1129,270
+Pos=0,644
+Size=1294,233
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Create Entity with MeshComponent]
-Pos=789,710
-Size=352,106
+Pos=591,299
+Size=393,127
 Collapsed=0
 
 [Window][UI_VISUALIZER_PANEL_WINDOW]
@@ -65213,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=343,829
+Size=343,825
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65223,18 +65224,18 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1551,52
-Size=369,722
+Pos=1195,52
+Size=405,590
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Visualizer/Window1_AA32A23C]
 IsChild=1
-Size=656,493
+Size=526,341
 
 [Window][Add New Window]
 Pos=463,269
-Size=215,97
+Size=225,122
 Collapsed=0
 
 [Window][Add New Window to Window1]
@@ -65303,18 +65304,23 @@ Size=768,348
 Collapsed=0
 
 [Window][Create Entity with AudioComponent]
-Pos=1021,495
+Pos=573,312
 Size=474,165
 Collapsed=0
 
 [Window][Create Entity with ScriptComponent]
 Pos=642,281
-Size=613,305
+Size=370,159
 Collapsed=0
 
 [Window][Select Script Class]
 Pos=0,3
 Size=32,40
+Collapsed=0
+
+[Window][Add New Text to Window2]
+Pos=710,392
+Size=232,106
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -65873,25 +65879,65 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x0711D0C9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x427FEE9F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2AA85FE1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD53BA5C9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x973836DD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x16C6A44B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEC2479E7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x295E9327,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x65344B46,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x77CC22B8,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=151,151 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=416,829 Split=Y Selected=0x2E9237F7
-        DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
-        DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1502,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=423,829 Split=Y Selected=0x2E9237F7
+        DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,514 Selected=0x2E9237F7
+        DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,309 Selected=0xF4B38336
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1175,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,733 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1204,575 CentralNode=1 Selected=0xBDDC88E0
-            DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,270 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1129,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=371,248 Selected=0x2323D3E4
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,590 Split=X Selected=0xF6FF0623
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xF6FF0623
+            DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,233 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=950,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=223,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
