--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,16 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=330,195
+Pos=525,381
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=423,514
+Size=391,516
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,8 +26,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=425,52
-Size=1175,590
+Pos=393,52
+Size=1211,754
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -43,7 +43,7 @@ Size=1920,32
 Collapsed=0
 
 [Window][Light]
-Pos=41,51
+Pos=72,52
 Size=440,173
 Collapsed=0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,568
-Size=423,309
+Pos=0,570
+Size=391,311
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1296,644
-Size=304,233
+Pos=1380,808
+Size=224,73
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,644
-Size=1294,233
+Pos=393,808
+Size=985,73
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65919,24 +65919,40 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xE9701897,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x616DC9D5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3EA02D19,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDAB492C1,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=86,161 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=423,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=391,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,514 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,309 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1175,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1207,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,590 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xF6FF0623
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,458 Split=X Selected=0xF6FF0623
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,233 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=950,248 Selected=0xBF096F38
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,73 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=982,248 Selected=0xBF096F38
             DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=223,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
