progress: AssetManager; SkillsUSA is awesome!!!

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,17 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=525,381
+ViewportPos=663,542
+ViewportId=0x9F5F46A1
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=391,516
+Size=345,514
 Collapsed=0
 DockId=0x00000005,0
 
@@ -21,13 +22,14 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=-45,25
+ViewportPos=240,62
+ViewportId=0xCBB8C2C5
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=393,52
-Size=1211,754
+Pos=347,52
+Size=1253,500
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -53,12 +55,12 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=289,228
+Pos=349,216
 Size=700,73
 Collapsed=0
 
 [Window][Debug]
-Pos=492,396
+Pos=1206,300
 Size=297,412
 Collapsed=0
 
@@ -293,8 +295,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,570
-Size=391,311
+Pos=0,568
+Size=345,309
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +313,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1380,808
-Size=224,73
+Pos=1377,554
+Size=223,323
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,7 +326,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,52
-Size=848,590
+Size=848,500
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -337,14 +339,14 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=393,808
-Size=985,73
+Pos=347,554
+Size=1028,323
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Create Entity with MeshComponent]
-Pos=591,299
-Size=393,127
+Pos=593,299
+Size=430,158
 Collapsed=0
 
 [Window][UI_VISUALIZER_PANEL_WINDOW]
@@ -65225,7 +65227,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1195,52
-Size=405,590
+Size=405,500
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65299,7 +65301,7 @@ Size=180,92
 Collapsed=0
 
 [Window][Choose Directory##ChooseDir]
-Pos=208,129
+Pos=26,96
 Size=768,348
 Collapsed=0
 
@@ -65321,6 +65323,24 @@ Collapsed=0
 [Window][Add New Text to Window2]
 Pos=710,392
 Size=232,106
+Collapsed=0
+
+[Window][UI Visualizer/om_2FEC0480]
+IsChild=1
+Size=134,223
+
+[Window][Add New Text to om]
+Pos=710,392
+Size=180,92
+Collapsed=0
+
+[Window][UI Visualizer/jake_F8224FAC]
+IsChild=1
+Size=254,150
+
+[Window][Add New Text to jake]
+Pos=710,392
+Size=180,92
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -65935,24 +65955,56 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x2DF7A03B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x7706A676,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD23793A7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCD8CDA98,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAE732098,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBC8B4966,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2B167D51,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x20F081B3,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=86,161 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=391,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=345,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,514 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,309 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1207,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1253,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,458 Split=X Selected=0xF6FF0623
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,500 Split=X Selected=0xF6FF0623
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,73 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=982,248 Selected=0xBF096F38
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,323 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1028,248 Selected=0xBF096F38
             DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=223,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
