fix: Some minor issues; feat_end: Switching screens works. The RuntimeAssetManager is working correctly and the RuntimeSceneRenderer displays the scene!!

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,17 +1,16 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=663,542
-ViewportId=0x9F5F46A1
+Pos=473,329
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=345,514
+Size=368,516
 Collapsed=0
 DockId=0x00000005,0
 
@@ -28,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=347,52
-Size=1253,500
+Pos=370,52
+Size=1234,522
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -295,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,568
-Size=345,309
+Pos=0,570
+Size=368,311
 Collapsed=0
 DockId=0x00000006,0
 
@@ -313,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1377,554
-Size=223,323
+Pos=1380,576
+Size=224,305
 Collapsed=0
 DockId=0x00000014,0
 
@@ -326,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,52
-Size=848,500
+Size=848,518
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -339,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=347,554
-Size=1028,323
+Pos=370,576
+Size=1008,305
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65227,7 +65226,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1195,52
-Size=405,500
+Size=405,518
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65987,24 +65986,36 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x4DC8BFE3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE239BA8F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x63D74DE0,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=345,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=368,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,514 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,309 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1253,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1230,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,500 Split=X Selected=0xF6FF0623
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,518 Split=X Selected=0xF6FF0623
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,323 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1028,248 Selected=0xBF096F38
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,305 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1005,248 Selected=0xBF096F38
             DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=223,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
